--- a/.github/workflows/daily-issue-cross-repo.yml
+++ b/.github/workflows/daily-issue-cross-repo.yml
@@ -15,117 +15,147 @@ jobs:
           github-token: ${{ secrets.SELF_STUDY_TOKEN }}
           script: |
             // ===== Config =====
-            const sourceOwner   = context.repo.owner;              // ex) 'Masiljangajji'
-            const sourceRepo    = context.repo.repo;               // ex) 'Algorithm'
-            const targetOwner   = sourceOwner;                     
-            const targetRepo    = 'self-study';                     // <-- 이슈를 생성할 타깃 리포
-            const dailyLabel    = 'algorithm-daily';                // 구분용 라벨(선택)
+            var sourceOwner = context.repo.owner;   // e.g. 'Masiljangajji'
+            var sourceRepo  = context.repo.repo;    // e.g. 'Algorithm'
+            var targetOwner = sourceOwner;          // same owner
+            var targetRepo  = 'self-study';         // create/update issues here
+            var dailyLabel  = 'algorithm-daily';    // label to mark daily issues
 
             // ===== Helpers =====
-            function kstDateString(d = new Date()) {
-              const fmt = (opt) => new Intl.DateTimeFormat('ko-KR', { timeZone: 'Asia/Seoul', ...opt }).format(d);
-              const y = fmt({ year: 'numeric' });
-              const m = fmt({ month: '2-digit' });
-              const day = fmt({ day: '2-digit' });
-              return ${y}-${m}-${day};
+            function kstDateString(d) {
+              var date = d || new Date();
+              function fmt(opt) {
+                return new Intl.DateTimeFormat('ko-KR', Object.assign({ timeZone: 'Asia/Seoul' }, opt)).format(date);
+              }
+              var y = fmt({ year: 'numeric' });
+              var m = fmt({ month: '2-digit' });
+              var day = fmt({ day: '2-digit' });
+              return y + '-' + m + '-' + day;
             }
 
-            const { repository, commits, pusher } = context.payload;
+            var payload = context.payload;
+            var repository = payload && payload.repository ? payload.repository : null;
+            var commits    = payload && payload.commits ? payload.commits : [];
+            var pusher     = payload && payload.pusher ? payload.pusher : null;
 
             if (!commits || commits.length === 0) {
               core.info('No commits in payload — skip.');
               return;
             }
 
-            // 소스(Algorithm) 커밋 HTML URL
-            const sourceHtml = repository.html_url; // https://github.com/Masiljangajji/Algorithm
+            // Source(Algorithm) repo HTML URL
+            var sourceHtml = repository && repository.html_url ? repository.html_url : ('https://github.com/' + sourceOwner + '/' + sourceRepo);
 
-            const todayStr   = kstDateString();
-            const issueTitle = 🧩 알고리즘 문제 풀이 - ${todayStr};
+            var todayStr   = kstDateString();
+            var issueTitle = '🧩 알고리즘 문제 풀이 - ' + todayStr;
 
-            // 1) 타깃 리포의 열린 이슈 목록
-            const openIssues = await github.paginate(
+            // 1) list open issues on target repo
+            var openIssues = await github.paginate(
               github.rest.issues.listForRepo,
               { owner: targetOwner, repo: targetRepo, state: 'open', per_page: 100 }
             );
 
-            // 2) 오늘 이슈 외 'algorithm-daily' 라벨이 붙은 이슈는 모두 close
-            for (const iss of openIssues) {
-              const hasDaily = (iss.labels || []).some(l => (typeof l === 'string' ? l === dailyLabel : l.name === dailyLabel));
+            // 2) close previous daily issues except today's
+            for (var i = 0; i < openIssues.length; i++) {
+              var iss = openIssues[i];
+              var labels = iss.labels || [];
+              var hasDaily = false;
+              for (var j = 0; j < labels.length; j++) {
+                var l = labels[j];
+                var name = (typeof l === 'string') ? l : l.name;
+                if (name === dailyLabel) { hasDaily = true; break; }
+              }
               if (hasDaily && iss.title !== issueTitle) {
                 await github.rest.issues.update({
-                  owner: targetOwner, repo: targetRepo, issue_number: iss.number, state: 'closed'
+                  owner: targetOwner,
+                  repo: targetRepo,
+                  issue_number: iss.number,
+                  state: 'closed'
                 });
-                core.info(Closed previous daily issue #${iss.number}: ${iss.title});
+                core.info('Closed previous daily issue #' + iss.number + ': ' + iss.title);
               }
             }
 
-            // 3) 오늘 이슈 찾기 (열린 것부터)
-            let todaysIssue = openIssues.find(i => i.title === issueTitle);
+            // 3) find today's open issue
+            var todaysIssue = null;
+            for (var i2 = 0; i2 < openIssues.length; i2++) {
+              if (openIssues[i2].title === issueTitle) { todaysIssue = openIssues[i2]; break; }
+            }
 
-            // 닫힌 동일 제목이 있으면 재오픈(예외 케이스 방어)
+            // if not found, try reopen a closed one with same title
             if (!todaysIssue) {
-              const closedIssues = await github.paginate(
+              var closedIssues = await github.paginate(
                 github.rest.issues.listForRepo,
                 { owner: targetOwner, repo: targetRepo, state: 'closed', per_page: 100 }
               );
-              const todaysClosed = closedIssues.find(i => i.title === issueTitle);
-              if (todaysClosed) {
-                await github.rest.issues.update({
-                  owner: targetOwner, repo: targetRepo, issue_number: todaysClosed.number, state: 'open'
-                });
-                todaysIssue = (await github.rest.issues.get({
-                  owner: targetOwner, repo: targetRepo, issue_number: todaysClosed.number
-                })).data;
-                core.info(Re-opened today's issue #${todaysIssue.number});
+              for (var k = 0; k < closedIssues.length; k++) {
+                if (closedIssues[k].title === issueTitle) {
+                  await github.rest.issues.update({
+                    owner: targetOwner,
+                    repo: targetRepo,
+                    issue_number: closedIssues[k].number,
+                    state: 'open'
+                  });
+                  var reopened = await github.rest.issues.get({
+                    owner: targetOwner,
+                    repo: targetRepo,
+                    issue_number: closedIssues[k].number
+                  });
+                  todaysIssue = reopened.data;
+                  core.info('Re-opened today\'s issue #' + todaysIssue.number);
+                  break;
+                }
               }
             }
 
-            // 4) 오늘 이슈 없으면 새로 생성
+            // 4) if still not found, create today's issue
             if (!todaysIssue) {
-              const body = [
-                ## ${issueTitle},
-                ,
-                - 작성자: **${pusher?.name || 'unknown'}**,
-                - 생성 시각 (KST): ${kstDateString(new Date())},
-                ,
-                > 하루 동안의 문제 풀이 커밋이 이 이슈에 **댓글로 누적**됩니다.,
-                > 소스 리포: \${sourceOwner}/${sourceRepo}\
-              ].join('\n');
-
-              const created = await github.rest.issues.create({
+              var creator = (pusher && pusher.name) ? pusher.name : 'unknown';
+              var bodyLines = [
+                '## ' + issueTitle,
+                '',
+                '- 작성자: **' + creator + '**',
+                '- 생성 시각 (KST): ' + kstDateString(new Date()),
+                '',
+                '> 하루 동안의 문제 풀이 커밋이 이 이슈에 **댓글로 누적**됩니다.',
+                '> 소스 리포: `' + sourceOwner + '/' + sourceRepo + '`'
+              ];
+              var created = await github.rest.issues.create({
                 owner: targetOwner,
                 repo: targetRepo,
                 title: issueTitle,
-                body,
-                labels: [dailyLabel] // 필요없으면 제거
+                body: bodyLines.join('\n'),
+                labels: [dailyLabel] // remove if you don't want a label
               });
               todaysIssue = created.data;
-              core.info(Created today's issue #${todaysIssue.number} in ${targetOwner}/${targetRepo});
+              core.info('Created today\'s issue #' + todaysIssue.number + ' in ' + targetOwner + '/' + targetRepo);
             }
 
-            // 5) 이번 push의 커밋들을 targetRepo 이슈에 댓글로 추가
-            const nowKST = kstDateString(new Date());
-            const lines = [];
-            lines.push(### 🔗 Push (KST: ${nowKST}) — from \${sourceOwner}/${sourceRepo}\);
+            // 5) append this push's commits as one comment
+            var nowKST = kstDateString(new Date());
+            var lines = [];
+            lines.push('### 🔗 Push (KST: ' + nowKST + ') — from `' + sourceOwner + '/' + sourceRepo + '`');
             lines.push('');
 
-            for (const c of commits) {
-              const shortSha  = c.id.substring(0, 8);
-              const commitUrl = ${sourceHtml}/commit/${c.id};
-              const firstLine = (c.message || '').split(/\r?\n/)[0];
-              lines.push(- [\${shortSha}\](${commitUrl}) ${firstLine});
+            for (var cIdx = 0; cIdx < commits.length; cIdx++) {
+              var c = commits[cIdx];
+              var shortSha  = c.id ? c.id.substring(0, 8) : '(no sha)';
+              var commitUrl = sourceHtml + '/commit/' + c.id;
+              var msg = (c.message || '');
+              var firstLine = msg.split(/\r?\n/)[0];
+              lines.push('- [`' + shortSha + '`](' + commitUrl + ') ' + firstLine);
             }
 
             lines.push('');
             lines.push('<details><summary>📝 Full Commit Messages</summary>');
             lines.push('');
-            for (const c of commits) {
-              const commitUrl = ${sourceHtml}/commit/${c.id};
-              lines.push(**Commit:** ${commitUrl});
-              lines.push('');
-              lines.push(c.message || '');
-              lines.push('');
+            for (var cIdx2 = 0; cIdx2 < commits.length; cIdx2++) {
+              var c2 = commits[cIdx2];
+              var commitUrl2 = sourceHtml + '/commit/' + c2.id;
+              lines.push('**Commit:** ' + commitUrl2);
+              lines.push('```');
+              lines.push(c2.message || '');
+              lines.push('```');
             }
             lines.push('</details>');
 
@@ -136,4 +166,4 @@ jobs:
               body: lines.join('\n')
             });
 
-            core.info(Updated issue #${todaysIssue.number} in ${targetOwner}/${targetRepo}: ${issueTitle});
+            core.info('Updated issue #' + todaysIssue.number + ' in ' + targetOwner + '/' + targetRepo + ': ' + issueTitle);
